--- a/distributed-quiz-service/question-app/public/index.html
+++ b/distributed-quiz-service/question-app/public/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header>
       <h1>Multiple Choice Quiz</h1>
-      <p>Test your knowledge with random questions! harshuu</p>
+      <p>Test your knowledge with random questions! harshuu-new</p>
     </header>
     <main>
       <div class="category-selector">
